ACLOCAL_AMFLAGS = -I m4
#DISTCHECK_CONFIGURE_FLAGS = --enable-tests
SUBDIRS = include zlib src examples test bindings/python
EXTRA_DIST = autotool.sh docs/manual.html docs/manual.rst docs/extension_protocol.rst \
docs/extension_protocol.html \
docs/projects.rst docs/projects.html \
docs/building.rst docs/building.html \
docs/running_tests.rst docs/running_tests.html \
docs/index.rst docs/index.html \
docs/python_binding.rst docs/python_binding.html \
docs/udp_tracker_protocol.rst docs/udp_tracker_protocol.html \
docs/client_test.rst docs/client_test.html \
docs/dht_extensions.html docs/dht_extensions.rst \
docs/make_torrent.html docs/make_torrent.rst \
docs/examples.html docs/examples.rst \
docs/features.html docs/features.rst \
docs/arctic_thumb.png \
docs/fdm.png \
docs/tvitty.jpg \
docs/leechcraft.png \
docs/lince.png \
docs/fatrat.png \
docs/miro.jpg \
docs/bitbuddy_thumb.jpg \
docs/bitscast_thumb.png \
docs/bitslug_thumb.png \
docs/bitrocket_thumb.png \
docs/btg_thumb.jpg \
docs/bitfox.png \
docs/acquasition.jpg \
docs/im_thumb.jpg \
docs/Linkage.png \
docs/deluge.png \
docs/halite_thumb.png \
docs/electric_sheep_thumb.jpg \
docs/moopolice_thumb.gif \
docs/qbittorrent_thumb.jpg \
docs/ziptorrent_thumb.gif \
docs/flush.jpg \
docs/pump.png \
docs/bubba.png \
docs/firetorrent.png \
docs/unicode_support.png docs/client_test.png docs/style.css Jamfile project-root.jam \
libtorrent-rasterbar.pc \
bindings/README.txt \
bindings/python/Jamfile \
bindings/python/setup.py \
bindings/python/client.py \
bindings/python/simple_client.py \
bindings/python/src/alert.cpp \
bindings/python/src/big_number.cpp \
bindings/python/src/converters.cpp \
bindings/python/src/datetime.cpp \
bindings/python/src/docstrings.cpp \
bindings/python/src/entry.cpp \
bindings/python/src/extensions.cpp \
bindings/python/src/filesystem.cpp \
bindings/python/src/fingerprint.cpp \
bindings/python/src/gil.hpp \
bindings/python/src/ip_filter.cpp \
bindings/python/src/magnet_uri.cpp \
bindings/python/src/module.cpp \
bindings/python/src/optional.hpp \
bindings/python/src/peer_info.cpp \
bindings/python/src/peer_plugin.cpp \
bindings/python/src/session.cpp \
bindings/python/src/session_settings.cpp \
bindings/python/src/torrent.cpp \
bindings/python/src/torrent_handle.cpp \
bindings/python/src/torrent_info.cpp \
bindings/python/src/torrent_status.cpp \
bindings/python/src/utility.cpp \
bindings/python/src/version.cpp

pkgconfigdir   = $(libdir)/pkgconfig
pkgconfig_DATA = libtorrent-rasterbar.pc
